--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,3 +11,10 @@
   flex-wrap: wrap;
   background-color: #000000;
 }
+.cabecalho nav {
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+  height: 100%;
+  flex-wrap: wrap;
+}
