--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,3 +22,17 @@
   width: 30%;
   max-width: 30%;
 }
+.cabecalho a {
+  text-decoration: none;
+  font-size: 4em;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: center;
+  padding: 20% 0%;
+}
+.cabecalho a:hover {
+  color: #000000;
+  background-color: #ffffff;
+}
