--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,7 @@
 @import url('./cabecalho.css');
 @import url('./conteudo.css');
+@import url('./rodape.css');
+
 * {
   box-sizing: border-box;
   margin: 0;
