--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,38 +1,16 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@import url("./cabecalho.css");
+@import url("./conteudo.css");
+@import url("./rodape.css");
 
-.cabecalho {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  background-color: #000000;
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
-.cabecalho nav {
-  display: flex;
-  justify-content: space-around;
-  width: 60%;
-  height: 100%;
-  flex-wrap: wrap;
+html{
+    font-size: 62.7%;
 }
-.cabecalho img {
-  width: 30%;
-  max-width: 30%;
-}
-.cabecalho a {
-  text-decoration: none;
-  font-size: 4em;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-  text-align: center;
-  padding: 20% 0%;
-}
-.cabecalho a:hover {
-  color: #000000;
-  background-color: #ffffff;
+.tit-sec{
+    text-align: center;
+    font-size: 5rem;
 }
