--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,17 @@
 @import url("./cabecalho.css");
 @import url("./conteudo.css");
 @import url("./rodape.css");
+@import url(./break-point-630px.css);
 
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-    font-size: 62.7%;
+html {
+  font-size: 62.7%;
 }
-.tit-sec{
-    text-align: center;
-    font-size: 5rem;
+.tit-sec {
+  text-align: center;
+  font-size: 5rem;
 }
