--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,3 +17,27 @@ html {
   text-align: center;
   font-size: 5rem;
 }
+
+table {
+  border-collapse: collapse;
+  margin: 5% auto;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:nth-child(odd) {
+  background-color: #cccccc;
+}
+
+tr:hover {
+  background-color: #343232;
+  color: #fff;
+}
